# alvin_inclass_assignment

./: CMakeLists.txt  Makefile  ReadME.md  main.cpp  sample_input2.txt  sample_input3.txt  submission.h
Tests/: input1.txt  input2.txt  input3.txt  test.cpp  test.h  test_2.cpp  test_3.cpp
